--- a/split-calculator/split-calculator.css
+++ b/split-calculator/split-calculator.css
@@ -2,4 +2,71 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    gap: 30px;
+    background-color: orangered;
+    border-radius: 8px;
+    padding: 20px;
+    opacity: 0.9;
+    padding-top: 40px;
+}
+
+body {
+    background-image: url(split_pic.jpg);
+    background-size: cover;
+    color: white;
+}
+
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    color: white;
+    -webkit-text-stroke-width: 0.6px;
+    -webkit-text-stroke-color: black;
+}
+
+.split {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    gap: 70px;
+    min-height: 100vh;
+}
+
+button {
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 8px;
+    padding: 8px;
+}
+
+.row {
+    display: flex;
+    gap: 20px;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+    font-size: 20px;
+}
+
+#grid-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.title {
+    color: white;
+    font-weight: 800;
+    font-family: Arial, Helvetica, sans-serif;
+    -webkit-text-stroke-width: 0.2px;
+    -webkit-text-stroke-color: black;
+    font-size: 70px;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
