--- a/styles.css
+++ b/styles.css
@@ -64,24 +64,58 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
+    justify-items: center;
+    align-items: center;
+    gap: 20px;
+    padding: 50px;
 }
 
-.about {
-    grid-area: 1 / 1 / 2 / 2;
+.main2 .about {
+    grid-area: 1 / 1 / 3 / 2;
+    align-self: start;
+    background-color: darkgray;
+    height: 400px;
+    border-radius: 10px;
+    
+}
+
+img {
+    border-radius: 10px;
+}
+
+.about .about-text {
+    color: white;
+    text-align: center;
+    font-size: 2.5rem;
+    padding-top: 15px;
 }
 
 .pic2 {
-    grid-area: 1 / 2 / 3 / 5;
+    grid-area: 1 / 3 / 3 / 4;
     height: 100px;
     width: auto;
+    /* align-self: start; */
+    justify-self: center;
 }
 
 .pic2 img {
-    height: 500px;
+    height: 700px;
     width: auto;
 }
 
 #logo {
     height: 100px;
     width: auto;
+}
+
+.pic1 {
+    grid-area: 3 / 1 / 5 / 2;
+}
+
+.main2 > {
+    transition: all .3s ease-in-out;
+}
+
+.main2 >:hover {
+    transform: scale(1.05);
 }
