--- a/styles.css
+++ b/styles.css
@@ -119,3 +119,12 @@ img {
 .main2 >:hover {
     transform: scale(1.05);
 }
+
+/* .link-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 24px;
+} */
